# pdf-decomposer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
pdf_decomposer/: __init__.py  adobe_service.py  base_decomposer.py  open_decomposer.py  paddle_decomposer.py  rebuild_table.py
tests/: test_api.py
